[package]
name = "vulkanus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.20.0"
vulkano-shaders = "0.20.0"
tobj = "2.0.2"
cgmath = "0.17"
image = "0.23.8"
crossterm = "0.17.7"
ansi_term = "0.12"